2006-01-09 Senganal T <tsenganal@novell.com>
	* Aggregation.cs
	* Expression.cs
		- resolving a name clash in IExpression 

2006-01-06 Senganal T <tsenganal@novell.com>

	* Aggregation.cs
		- a correction to the previous check-in

2006-01-06 Senganal T <tsenganal@novell.com>

	* Aggregation.cs
		- Modified the cache to listen for RowChangedEvents.
	* Expression.cs
	* IExpression.cs
		- Added a Reset Method to cleanup when a Datacolumn is removed
		from a table.
	* Parser.jay
		- Modified to check :
		1.Aggregate Functions : Only for columns returning multiple values (child/local)
		2.Other Numeric/Functions : Only for columns that return single value (parent/local)

2005-12-20 Senganal T <tsenganal@novell.com>

	* Aggregation.cs :
		Modified the Eval and CalculateStatisticalFunction to add boundary checks.
		Fixes #77025.

2005-11-30 Konstantin Triger <kostat@mainsoft.com>

	* Parser.jay: use Convert.ToInt32() instead of cast to throw OverflowException.

2005-10-26 Konstantin Triger <kostat@mainsoft.com>

	* In.cs: Fix the enumerator initialization problem.

2005-10-21 Senganal T <tsenganal@novell.com>

	* Numeric.cs :
		- Modified the Max and Min functions to convert strings(numeric) to
		double. Fixes bug #76213. 
 	
2005-09-19 Boris Kirzner <borisk@mainsoft.com>
	* ColumnReference.cs, Expressions.cs, Like.cs, Aggregation.cs, Literal.cs,
	StringFunctions.cs, In.cs, Functions.cs : implemented Equals() 
	and GetHashCode() methods for all Mono.Data.SqlExpressions classes,enabling
	comparison of the filter expressions.

2005-08-02  Sureshkumar T  <tsureshkumar@novell.com>

	* Tokenizer.cs: ReadString (): added an overload where the
	terminator can be escaped by repeating twice.

2005-06-29  Sureshkumar T  <tsureshkumar@novell.com>

	* ArithmeticExpressions.cs: Eval :if any one of the argument is
	null for an operator, the result is also NULL.

2005-05-02 Konstantin Triger <kostat@mainsoft.com>
