@@ -1,3 +1,6 @@
+2006-01-18 Boris Kirzner <borisk@mainsoft.com>
+	* DataColumn.cs: added PropertyCchangedEvent handling.
+
 2006-01-17  Senganal T  <tsenganal@novell.com>
 	
 	* DataRow.cs:
